cluster/infrastructure/egress-proxy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: egress-proxy
    app.kubernetes.io/version: "1.7"
  name: egress-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: egress-proxy
  template:
    metadata:
      annotations:
        homelab/egress-proxy-config-hash: 32abaf6929801525cf14987f9117d06d7185d8925e3b2e305f43c8479dc22281
      labels:
        app.kubernetes.io/name: egress-proxy
        app.kubernetes.io/version: "1.7"
    spec:
      containers:
      - command:
        - /usr/bin/tinyproxy
        - -d
        - -c
        - /etc/tinyproxy/tinyproxy.conf
        image: kalaksi/tinyproxy:1.7@sha256:5a65354cbb5f9c0fdcc8de3d3af8dd1c5ea072b3a1f52e5961a9a5cce6eba227
        name: egress-proxy
        ports:
        - containerPort: 8888
          name: proxy
        volumeMounts:
        - mountPath: /etc/tinyproxy
          name: config
          readOnly: true
        resources:
          requests:
            cpu: 10m
            memory: 16Mi
          limits:
            cpu: 500m
            memory: 256Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 57981
          runAsGroup: 57981
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      volumes:
      - name: config
        configMap:
          name: egress-proxy-config
      securityContext:
        seccompProfile:
          type: RuntimeDefault
