cluster/infrastructure/egress-proxy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: egress-proxy
    app.kubernetes.io/version: "1.7"
  name: egress-proxy
spec:
  selector:
    app.kubernetes.io/name: egress-proxy
  ports:
  - name: proxy
    port: 8888
    targetPort: 8888
